--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>计算器</title>
-    <link href="./tubiao.png" sizes="16*16" type="images/png" rel="icon">
+    <link href="tubiao.png" sizes="16*16" type="images/png" rel="icon">
     <style>
         .shuzi {
             font-size:28px;
