--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             font-size:28px;
             text-align:right;
             line-height:70px;
+            color:#111111;
             width:279px;
             height:70px;
             padding:5px;
